<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Paises">

    <!-- TODO: Update blank fragment layout -->

    <RadioGroup
        android:id="@+id/grpPiases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioRusia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rusia" />

        <RadioButton
            android:id="@+id/radioGrecia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grecia" />

        <RadioButton
            android:id="@+id/radioEspaña"
            android:text="@string/espana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioBelgica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/belgica" />

        <RadioButton
            android:id="@+id/radioReinoUnido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inglaterra" />

        <RadioButton
            android:id="@+id/radioPortugal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/portugal" />

        <RadioButton
            android:id="@+id/radioFrancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/francia" />

        <RadioButton
            android:id="@+id/radioItalia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/italia" />

        <RadioButton
            android:id="@+id/radioAlemania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alemania" />

        <RadioButton
            android:id="@+id/radioHolanda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/holanda" />
    </RadioGroup>
</FrameLayout>